<resources>
    <string name="app_name">Kahraman AI</string>
    <string name="upload_desc">Belge yüklemek için paylaşım QR kodunu okutun veya paylaşım linkini kullanın.</string>
    <string name="qr_kod">QR Kodu Okutun</string>
    <string name="veya">veya</string>
    <string name="share_link">Paylaşım linki</string>
    <string name="share_link_action">Paylaşım linkini kullan</string>
    <string name="share_link_help">"QR kod veya paylaşım linki oluşturmak için Kahraman AI web uygulamasını kullanınız"</string>
    <string name="iptal_qr">QR Kod Okumayı Sonlandır</string>
    <string name="scan_qr">QR Kodu Okutun</string>
    <string name="iptal_anything">İptal</string>
    <string name="checking_link">Kontrol ediliyor...</string>
    <string name="company_name">Şirket Adı</string>
    <string name="bundle_code_name">Bundle Code / Name</string>
    <string name="iptal_photo">Kapat (X)</string>
    <string name="use_last_link">En son kullanılan paylaşım linki</string>
    <string name="open_link">Linki Web tarayıcısında aç</string>
    <string name="sil_link">Sil</string>
    <string name="dialog_title">Etiket seçiniz:</string>
    <string name="kahramanai_link">kahramanai.com</string>
    <string name="receipt_image">Receipt view</string>
</resources>