<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:padding="12dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Heading -->
    <LinearLayout
        android:id="@+id/panelForKahraman"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="50dp"
            android:padding="4dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:paddingBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_desc"
            android:padding="8dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"
            android:paddingBottom="4dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/scanViewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="8dp"
        android:visibility="gone"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:paddingBottom="4dp"/>

    <FrameLayout
        android:id="@+id/camera_container"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- Camera Preview -->
        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- QR scan overlay -->
        <com.kahramanai.QRScanOverlayView
            android:id="@+id/overlayView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

    </FrameLayout>

    <TextView
        android:id="@+id/cancel_qr_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iptal_qr"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="14sp"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"
        android:paddingBottom="4dp"/>

    <LinearLayout
        android:id="@+id/panelForLinks"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <Button
            android:id="@+id/btn_scan_qrcode"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/qr_kod" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veya"
            android:padding="8dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"
            android:paddingBottom="4dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/share_link"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputShareLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:visibility="gone"
            android:id="@+id/btn_use_share_link"
            android:layout_width="match_parent"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/share_link_action" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_link_help"
            android:padding="8dp"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            android:paddingBottom="4dp"/>

    </LinearLayout>




</LinearLayout>